Overflow issue
Overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #3661b0;
+  overflow: hidden;
   
 }
 canvas {
